<resources>
    <string name="app_name">Learning Motion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="plataformaAM_Long">Plataforma Aprendizagem em Movimento</string>
    <string name="plataformaAM_Short">Aprendizagem em Movimento</string>
    <string name="plataformaAM_StartScreen">Aprendizagem\nem\nMovimento</string>

    <!-- Título das Atividades -->
    <string name="title_activity_login_ui">Efetue seu Login !</string>
    <string name="title_dialog_login_am">Aprendizagem em Movimento!</string>
    <string name="title_activity_after_login_ui">Plataforma AM</string>
    <string name="title_activity_login">Aprendizagem em Movimento!</string>





    <!-- Forms Label -->
    <string name="lblLogin">Login:</string>
    <string name="lblPassword">Senha:</string>


    <!-- Form Hints -->
    <string name="hntLogin">Digite o Login:</string>
    <string name="hntPassword">Digite a Senha:</string>



    <!-- Buttons Names -->
    <string name="btnDoLogin">Logar pela Plataforma AM!</string>
    <string name="btnDoLogout">Logout!</string>
    <string name="btnDoRegister">Cadastrar novo usuário!</string>
    <string name="btnCreate">Criar!</string>
    <string name="btnOK">OK!</string>
    <string name="btnSave">Salvar!</string>
    <string name="btnEdit">Editar!</string>
    <string name="btnCancel">Cancelar!</string>
    <string name="btnOpenCamera">Câmera</string>
    <string name="btnOpenFile">Arquivo</string>
    <string name="btnYes">Sim</string>
    <string name="btnNo">Não</string>
    <string name="btnDetail">Detalhar</string>


    <!-- Geeneric Messages -->
    <string name="msgLogoutWarningInfo">
        \n
        O logout desconectará você deste aparelho.  \n
        Seus regristros serão mantidos nos servidores da aplicação plataformaAM  \n \n
    </string>
    <string name="msgLoginGreeting">Efetue seu Login</string>
    <string name="msgLoginRegisterOption"> Primeira vez aqui? </string>



    <!-- Error Messages -->
    <string name="errorGPSDisable">GPS ou Serviço de Localização desabilitado! </string>
    <string name="errorInternetDisable">Internet desabilitada! </string>
    <string name="errorLoginFail">Falha na Operação: Favor verificar Login/Senha</string>
    <string name="errorInternetConnectionFail">Falha na conexão na Internet</string>
    <string name="errorNoDataReceived">Falha: nenhum dado recebido.</string>
    <string name="errorOperationNotAllwed">Operação não Permitida</string>






</resources>
