<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plataformaam.mobile.android.newclient.app.LoginUI"
    android:background="@drawable/plano_fundo_jardim_penha"
    >

    <TextView
        android:id="@+id/txtLoginUIAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msgLoginGreeting"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLoginUIAppName"
        android:orientation="vertical"
        android:gravity="center_horizontal"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDoLogin"

            android:id="@+id/plataformaam_login_button"
            android:layout_gravity="center_horizontal"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            style="@style/btn_success"
            />

        <TextView
            android:id="@+id/txtOrMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Ou"
            android:layout_below="@+id/plataformaam_login_button"
            android:layout_margin="5dp"
            />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"            />
    </LinearLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msgLoginRegisterOption"
        android:id="@+id/txtLoginUIRegisterOption"
        android:layout_above="@+id/btnGoToCreateNewUser"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDoRegister"
        android:id="@+id/btnGoToCreateNewUser"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/formContainerUserLoginUI"
        android:layout_alignEnd="@+id/formContainerUserLoginUI"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goCreateNewUser"
        style="@style/btn_danger"
        />




</RelativeLayout>
