<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.plataformaam.mobile.android.newclient.app.activities.LoginActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal|end"

        android:id="@+id/linearLayout"
        android:layout_above="@+id/txtLoginUIRegisterOption"
        android:weightSum="3"
        android:layout_alignParentTop="true">




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDoLogin"
            android:id="@+id/plataformaam_login_button"
            android:layout_gravity="center_horizontal"
            style="@style/btn_success"

            />

        <TextView
            android:id="@+id/txtOrMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Ou"
            android:layout_below="@+id/plataformaam_login_button"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans" />


        <!-- com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"            / -->

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msgLoginRegisterOption"
        android:id="@+id/txtLoginUIRegisterOption"
        android:gravity="center"
        android:layout_above="@+id/btnGoToCreateNewUser"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDoRegister"
        android:id="@+id/btnGoToCreateNewUser"
        style="@style/btn_warning"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />



</RelativeLayout>
